Removed PHP files

--- a/nav.html
+++ b/nav.html
@@ -1,4 +1,4 @@
-<ul id="nav">
+<nav>
     <li id="nav-left">
         <img src="images/BoarBotMascot.png">
         <a href="https://discord.com/api/oauth2/authorize?client_id=1025590776861819012&permissions=35840&scope=bot%20applications.commands" target="_blank" rel="noopener noreferrer">
@@ -8,4 +8,4 @@
     <li><a href="#">Home</a></li>
     <li><a href="#">Docs</a></li>
     <li><a href="#">Legal</a></li>
-</ul> 
+</nav>
