--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
-<?
-    $headTitle = 'BoarBot - Discord App';
-    include("head.php");
-?>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/BoarBotMascot.png">
+    <link rel="stylesheet" href="main.css">
+    <title>BoarBot - Discord Bot</title>
+</head>
 <body>
-<? include("nav.html"); ?>
 <main id="home">
     <section id="summary">
         <h1>BoarBot</h1>
