Navigation button functionality

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="main.css">
     <title>BoarBot - Discord Bot</title>
 </head>
-<body>
-<main id="home">
+<body id="home">
+<main id="home-main">
     <section id="summary">
         <h1>BoarBot</h1>
         <p>A gacha-like game based around boars! Collect, buy, sell, and compete with others for the top spots on several different leaderboards!</p>
@@ -18,8 +18,15 @@
         <img src="images/DailyItems.png">
         <div>
             <h2>Collect</h2>
-            <p>BoarBot has dozens of unique boars for you to collect! Some are reasy to get, some are extremely rare drops, and some can be obtained during events.</p>
+            <p>BoarBot has dozens of unique boars for you to collect! Some are easy to get, some are extremely rare drops, and some can be obtained during events.</p>
         </div>
+    </section>
+    <section class="feature">
+        <div>
+            <h2>Power Up</h2>
+            <p>Bring some power to your collecting capabilities by participating in Powerup Events! Powerups have a wide range of abilities for you to use and discover.</p>
+        </div>
+        <img src="images/DailyItems.png">
     </section>
     <section class="feature">
         <img src="images/DailyItems.png">
@@ -29,18 +36,11 @@
         </div>
     </section>
     <section class="feature">
-        <img src="images/DailyItems.png">
         <div>
             <h2>Collect!</h2>
             <p>BoarBot has dozens of boars and other items to collect and show off! Some are rarer than others and some are only obtained during events!</p>
         </div>
-    </section>
-    <section class="feature">
         <img src="images/DailyItems.png">
-        <div>
-            <h2>Collect!</h2>
-            <p>BoarBot has dozens of boars and other items to collect and show off! Some are rarer than others and some are only obtained during events!</p>
-        </div>
     </section>
 </main>
 </body>
