--- a/nav.html
+++ b/nav.html
@@ -5,7 +5,7 @@
             <button>Invite</button>
         </a>
     </li>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Docs</a></li>
-    <li><a href="#">Legal</a></li>
+    <li><a href="index.html#home">Home</a></li>
+    <li><a href="https://boarbot.fandom.com/wiki/Boar_Wiki">Wiki</a></li>
+    <li><a href="legal.html#legal">Legal</a></li>
 </nav>
