--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/BoarBotMascot.png">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>BoarBot - Discord Bot</title>
 </head>
 <body id="home">
@@ -17,30 +18,30 @@
     <section class="feature">
         <img src="images/DailyItems.png">
         <div>
-            <h2>Collect</h2>
-            <p>BoarBot has dozens of unique boars for you to collect! Some are easy to get, some are extremely rare drops, and some can be obtained during events.</p>
+            <h2>COLLECT</h2>
+            <p>BoarBot has dozens of unique boars for you to collect! Some are easy to get, some are extremely rare drops, and some can be obtained during events!</p>
         </div>
-    </section>
-    <section class="feature">
-        <div>
-            <h2>Power Up</h2>
-            <p>Bring some power to your collecting capabilities by participating in Powerup Events! Powerups have a wide range of abilities for you to use and discover.</p>
-        </div>
-        <img src="images/DailyItems.png">
     </section>
     <section class="feature">
         <img src="images/DailyItems.png">
         <div>
-            <h2>Collect!</h2>
-            <p>BoarBot has dozens of boars and other items to collect and show off! Some are rarer than others and some are only obtained during events!</p>
+            <h2>POWER UP</h2>
+            <p>Bring some power to your collecting capabilities by participating in Powerup Events! Powerups have a wide range of abilities for you to use and discover!</p>
         </div>
     </section>
     <section class="feature">
-        <div>
-            <h2>Collect!</h2>
-            <p>BoarBot has dozens of boars and other items to collect and show off! Some are rarer than others and some are only obtained during events!</p>
-        </div>
         <img src="images/DailyItems.png">
+        <div>
+            <h2>COMPETE</h2>
+            <p>Have a competitive spirit? You can show it through the several leaderboards that BoarBot shows! Players that have a top spot on a leaderboard also get badge!</p>
+        </div>
+    </section>
+    <section class="feature">
+        <img src="images/DailyItems.png">
+        <div>
+            <h2>BUY AND SELL</h2>
+            <p>Interact with a full-fledged economy by setting up buy orders and sell offers! This is a great place to see and purchase boars you don't have!</p>
+        </div>
     </section>
 </main>
 </body>
