--- a/legal/legal.html
+++ b/legal/legal.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/BoarBotMascot.png">
-    <link rel="stylesheet" href="main.css">
+    <link rel="icon" href="/images/BoarBotMascot.png">
+    <link rel="stylesheet" href="/main.css">
     <title>Legal</title>
 </head>
 <body id="legal">
+    
 </body>
 </html>
-<script src="script.js" defer></script>
+<script src="/script.js" defer></script>
