--- a/nav.html
+++ b/nav.html
@@ -1,11 +1,11 @@
 <nav>
     <li id="nav-left">
-        <img src="images/BoarBotMascot.png">
+        <img src="/images/BoarBotMascot.png">
         <a href="https://discord.com/api/oauth2/authorize?client_id=1025590776861819012&permissions=35840&scope=bot%20applications.commands" target="_blank" rel="noopener noreferrer">
             <button>Invite</button>
         </a>
     </li>
-    <li><a href="index.html#home">Home</a></li>
-    <li><a href="https://boarbot.fandom.com/wiki/Boar_Wiki">Wiki</a></li>
-    <li><a href="legal.html#legal">Legal</a></li>
+    <li><a href="/#home">Home</a></li>
+    <li><a href="https://boarbot.fandom.com/wiki/Boar_Wiki">Wiki ⧉</i></a></li>
+    <li><a href="/legal#legal">Legal</a></li>
 </nav>
