--- a/nav.html
+++ b/nav.html
@@ -7,5 +7,5 @@
     </li>
     <li><a href="/#home">Home</a></li>
     <li><a href="https://boarbot.fandom.com/wiki/Boar_Wiki">Wiki ⧉</i></a></li>
-    <li><a href="/legal#legal">Legal</a></li>
+    <li><a href="/legal/index.html#legal">Legal</a></li>
 </nav>
