URLs should be better now

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>BoarBot - Discord Bot</title>
 </head>
-<body id="home">
-<main id="home-main">
+<body>
+<main id="home">
     <section id="summary">
         <h1>BoarBot</h1>
         <p>A gacha-like game based around boars! Collect, buy, sell, and compete with others for the top spots on several different leaderboards!</p>
