--- a/nav.html
+++ b/nav.html
@@ -5,7 +5,7 @@
             <button>Invite</button>
         </a>
     </li>
-    <li><a href="/">Home</a></li>
+    <li><a href="/#">Home</a></li>
     <li><a href="https://boarbot.fandom.com/wiki/Boar_Wiki">Wiki ⧉</i></a></li>
-    <li><a href="/legal/index.html">Legal</a></li>
+    <li><a href="/legal#">Legal</a></li>
 </nav>
