Better mobile navigation, New images

--- a/nav.html
+++ b/nav.html
@@ -5,7 +5,12 @@
             <button>Invite</button>
         </a>
     </li>
-    <li><a href="/#">Home</a></li>
-    <li><a href="https://boarbot.fandom.com/wiki/Boar_Wiki">Wiki ⧉</i></a></li>
-    <li><a href="/legal#">Legal</a></li>
+    <div id="nav-items">
+        <li><a href="/#">Home</a></li>
+        <li><a href="https://boarbot.fandom.com/wiki/Boar_Wiki">Wiki ⧉</i></a></li>
+        <li><a href="/legal/#">Legal</a></li>
+    </div>
+    <li id="hamburger-menu">
+        <button><i id="hamburger"></i></button>
+    </li>
 </nav>
