--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
         </div>
     </section>
     <section class="feature">
-        <img src="images/DailyItems.png">
+        <img src="images/PowerupShowcase.png">
         <div>
             <h2>POWER UP</h2>
             <p>Bring some power to your collecting capabilities by participating in Powerup Events! Powerups have a wide range of abilities for you to use and discover!</p>
         </div>
     </section>
     <section class="feature">
-        <img src="images/DailyItems.png">
+        <img src="images/LeaderboardShowcase.png">
         <div>
             <h2>COMPETE</h2>
             <p>Have a competitive spirit? You can show it through the several leaderboards that BoarBot shows! Players that have a top spot on a leaderboard also get badge!</p>
         </div>
     </section>
     <section class="feature">
-        <img src="images/DailyItems.png">
+        <img src="images/MarketShowcase.png">
         <div>
             <h2>BUY AND SELL</h2>
-            <p>Interact with a full-fledged economy by setting up buy orders and sell offers! This is a great place to see and purchase boars you don't have!</p>
+            <p>Interact with a full-fledged economy by setting up buy orders and sell offers! This is a great place to see and purchase boars you don't already have!</p>
         </div>
     </section>
 </main>
