--- a/legal/index.html
+++ b/legal/index.html
@@ -4,12 +4,83 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/images/BoarBotMascot.png">
+    <link rel="icon" href="/assets/images/BoarBotMascot.png">
     <link rel="stylesheet" href="/main.css">
     <title>Legal</title>
 </head>
-<body id="legal">
-    
+<body>
+<main>
+    <section class="legal-section" id="terms">
+        <h1>Terms of Service</h1>
+        <div>
+            <p>Last Updated: July 23, 2023</p>
+            <h2>Definitions</h2>
+            <p>For the purpose of these Terms and Conditions:</p>
+            <ul>
+                <li><strong>Service</strong> refers to BoarBot, a Discord third-party application.</li>
+                <li><strong>We</strong> refers to the developers and maintainers of the Service.</li>
+                <li><strong>You</strong> means the individual using the Service.</li>
+                <li><strong>Server</strong> means a Discord server, a collection of users.</li>
+                <li><strong>Support Server</strong> refers to Boar Central, a Discord server that is linked in the Service's About Me on its Discord account.</li>
+                <li><strong>Item</strong> refers to anything that is stored on an individual's profile.
+                    <ul><li>This includes, but not limited to, <em>Boar Bucks</em>, <em>Boars</em>, <em>Powerups</em>, and <em>Statistics</em> </li></ul>
+                </li>
+                <li><strong>Gift</strong> refers to a feature where individuals can give other individuals Items through the use of the <em>/boar collection</em> command.</li>
+                <li><strong>Event</strong> refers to any message sent by the Service that can change an individual's Items.
+                    <ul><li>This includes <em>Powerup Events</em></li></ul>
+                </li>
+                <li><strong>Leaderboard</strong> refers to the public collection of individuals' information in descending order.</li>
+                <li><strong>Community Features</strong> refers to commands and features in the Service that affect other individuals using the Service.
+                    <ul><li>These features include the usage of the <em>/boar market</em> command, <em>/boar report</em> command, Gifts, Events, and Leaderboards.</li></ul>
+                </li>
+                <li><strong>Gameplay</strong> refers to the normal processes that occur on the Service.</li>
+                <li><strong>Alternate Account</strong> refers to a Discord account that is not the main account of operations for an individual.</li>
+                <li><strong>Automated</strong> refers to using scripts or external programs to automatically perform an action on the Service.</li>
+            </ul>
+            <h2>Acknowledgement</h2>
+            <p>By using the Service, You and your Server agree to be bound by these Terms of Service. Any violation of these Terms of Service will result in forfeiting Your and your Server's privileges of Community Features.</p>
+            <h2>Terms of Use</h2>
+            <ul>
+                <li>You must not abuse Community Features through the usage of Alternate Accounts or Automated actions.</li>
+                <li>You must not intentionally attempt to deny other individuals of using the Service through command spam or crashing the bot.</li>
+                <li>You must not alter Gameplay through the intentional use of exploits or bugs.</li>
+                <li>If Your account is less than 30 days old, your access to Community Features will be limited.</li>
+                <li>We reserve the right to prohibit You or your Server from using the Service.</li>
+                <li>You are solely responsible for any violation You caused.</li>
+                <li>We reserve the right to update these Terms of Service anytime with notice in the Support Server.</li>
+            </ul>
+        </div>
+    </section>
+    <section class="legal-section" id="privacy">
+        <h1>Privacy Policy</h1>
+        <div>
+            <p>Last Updated: July 23, 2023</p>
+            <h2>Definitions</h2>
+            <p>For the purpose of these Terms and Conditions:</p>
+            <ul>
+                <li><strong>Service</strong> refers to BoarBot, a Discord third-party application.</li>
+                <li><strong>We</strong> refers to the developers and maintainers of the Service.</li>
+                <li><strong>You</strong> means the individual using the Service.</li>
+                <li><strong>Server</strong> means a Discord server, a collection of users.</li>
+                <li><strong>Support Server</strong> refers to Boar Central, a Discord server that is linked in the Service&#39;s About Me on its Discord account.</li>
+                <li><strong>Community Features</strong> refers to commands and features in the Service that affect other individuals using the Service.
+                    <ul><li>These features include the usage of the <em>/boar market</em> command, <em>/boar report</em> command, Gifts, Events, and Leaderboards.</li></ul>
+                </li>
+                <li><strong>Gameplay</strong> refers to the normal processes that occur on the Service.</li>
+            </ul>
+            <h2>Personal Data</h2>
+            <p>The only personal data We collect is Your user ID and your Server&#39;s guild ID, which is used to fetch Your Gameplay data and preferences.</p>
+            <h2>Other Data</h2>
+            <p>The only other data We collect is used for Gameplay and support.</p>
+            <ul>
+                <li>Reports are stored in a Discord channel on the Support Server.</li>
+                <li>Preferences and statistics for You and your Server are collected to perform Gameplay functions.</li>
+            </ul>
+            <h2>Sharing, Use, and Distribution of Information and Data</h2>
+            <p>None of the data or information we collect is shared with third parties. All data is used exclusively for Gameplay and support.</p>
+        </div>
+    </section>
+</main>
 </body>
 </html>
-<script src="/script.js" defer></script>
+<script src="/assets/scripts/script.js" defer></script>
