--- a/legal/index.html
+++ b/legal/index.html
@@ -78,6 +78,8 @@
             </ul>
             <h2>Sharing, Use, and Distribution of Information and Data</h2>
             <p>None of the data or information we collect is shared with third parties. All data is used exclusively for Gameplay and support.</p>
+            <h2>Deletion of Your Data</h2>
+            <p>At any time, You can delete all of Your stored data by running the command <em>/boar self-wipe</em> through the Service.</p>
         </div>
     </section>
 </main>
