GitHub page added, Legal updated

--- a/legal/index.html
+++ b/legal/index.html
@@ -18,7 +18,7 @@
             <p>For the purpose of these Terms and Conditions:</p>
             <ul>
                 <li><strong>Service</strong> refers to BoarBot, a Discord third-party application.</li>
-                <li><strong>We</strong> refers to the developers and maintainers of the Service.</li>
+                <li><strong>We/Us</strong> refers to the developers and maintainers of the Service.</li>
                 <li><strong>You</strong> means the individual using the Service.</li>
                 <li><strong>Server</strong> means a Discord server, a collection of users.</li>
                 <li><strong>Support Server</strong> refers to Boar Central, a Discord server that is linked in the Service's About Me on its Discord account.</li>
@@ -41,9 +41,11 @@
             <p>By using the Service, You and your Server agree to be bound by these Terms of Service. Any violation of these Terms of Service will result in forfeiting Your and your Server's privileges of Community Features.</p>
             <h2>Terms of Use</h2>
             <ul>
-                <li>You must not abuse Community Features through the usage of Alternate Accounts or Automated actions.</li>
+                <li>You must not abuse Community Features to gain an advantage through the usage of Alternate Accounts or Automated actions.</li>
                 <li>You must not intentionally attempt to deny other individuals of using the Service through command spam or crashing the bot.</li>
                 <li>You must not alter Gameplay through the intentional use of exploits or bugs.</li>
+                <li>If You discover an exploit or bug, You must not share the issue publicly. It is requested that You go through the proper channels to report the issue.</li>
+                    <ul><li>These proper channels include using <em>/boar report</em> on the Service or contacting Us directly.</li></ul>
                 <li>If Your account is less than 30 days old, your access to Community Features will be limited.</li>
                 <li>We reserve the right to prohibit You or your Server from using the Service.</li>
                 <li>You are solely responsible for any violation You caused.</li>
@@ -62,14 +64,14 @@
                 <li><strong>We</strong> refers to the developers and maintainers of the Service.</li>
                 <li><strong>You</strong> means the individual using the Service.</li>
                 <li><strong>Server</strong> means a Discord server, a collection of users.</li>
-                <li><strong>Support Server</strong> refers to Boar Central, a Discord server that is linked in the Service&#39;s About Me on its Discord account.</li>
+                <li><strong>Support Server</strong> refers to Boar Central, a Discord server that is linked in the Service's About Me on its Discord account.</li>
                 <li><strong>Community Features</strong> refers to commands and features in the Service that affect other individuals using the Service.
                     <ul><li>These features include the usage of the <em>/boar market</em> command, <em>/boar report</em> command, Gifts, Events, and Leaderboards.</li></ul>
                 </li>
                 <li><strong>Gameplay</strong> refers to the normal processes that occur on the Service.</li>
             </ul>
             <h2>Personal Data</h2>
-            <p>The only personal data We collect is Your user ID and your Server&#39;s guild ID, which is used to fetch Your Gameplay data and preferences.</p>
+            <p>The only personal data We collect is Your user ID and your Server's guild ID, which is used to fetch Your Gameplay data and preferences.</p>
             <h2>Other Data</h2>
             <p>The only other data We collect is used for Gameplay and support.</p>
             <ul>
@@ -79,7 +81,7 @@
             <h2>Sharing, Use, and Distribution of Information and Data</h2>
             <p>None of the data or information we collect is shared with third parties. All data is used exclusively for Gameplay and support.</p>
             <h2>Deletion of Your Data</h2>
-            <p>At any time, You can delete all of Your stored data by running the command <em>/boar self-wipe</em> through the Service.</p>
+            <p>At any time, You can delete all of Your stored data by running the command <em>/boar self-wipe</em> through the Service. After requesting deletion, Your data will be deleted after 24 hours. If You had broken the Terms of Service, Your User ID will continue to be stored to prevent further usage of Community Features.</p>
         </div>
     </section>
 </main>
