--- a/nav.html
+++ b/nav.html
@@ -7,7 +7,8 @@
     </li>
     <div id="nav-items">
         <li><a href="/#">Home</a></li>
-        <li><a href="https://boarbot.fandom.com/wiki/Boar_Wiki">Wiki ⧉</i></a></li>
+        <li><a href="https://boarbot.fandom.com/wiki/Boar_Wiki" target="_blank" rel="noreferrer noopener">Wiki ⧉</i></a></li>
+        <li><a href="https://github.com/WeslayCodes/BoarBot" target="_blank" rel="noreferrer noopener">GitHub ⧉</i></a></li>
         <li><a href="/legal/#">Legal</a></li>
     </div>
     <li id="hamburger-menu">
