--- a/legal/index.html
+++ b/legal/index.html
@@ -81,7 +81,7 @@
             <h2>Sharing, Use, and Distribution of Information and Data</h2>
             <p>None of the data or information we collect is shared with third parties. All data is used exclusively for Gameplay and support.</p>
             <h2>Deletion of Your Data</h2>
-            <p>At any time, You can delete all of Your stored data by running the command <em>/boar self-wipe</em> through the Service. After requesting deletion, Your data will be deleted after 24 hours. If You had broken the Terms of Service, Your User ID will continue to be stored to prevent further usage of Community Features.</p>
+            <p>At any time, You can delete all of Your stored data by running the command <em>/boar self-wipe</em> through the Service. After requesting deletion, Your data will be deleted after 24 hours. If You had broken the Terms of Service, Your User ID will continue to be stored to prevent further usage of Community Features. Your Server has its data automatically deleted in roughly 6 hours of the Service being removed from the Server.</p>
         </div>
     </section>
 </main>
