--- a/legal/index.html
+++ b/legal/index.html
@@ -42,6 +42,7 @@
             <h2>Terms of Use</h2>
             <ul>
                 <li>You must not abuse Community Features to gain an advantage through the usage of Alternate Accounts or Automated actions.</li>
+                    <ul><li>This includes but not limited to: Giving and receiving Gifts to/from Alternate Accounts, buying/selling boars from Alternate Accounts, and using Alternate Accounts in Events to get more/better rewards.</li></ul>
                 <li>You must not intentionally attempt to deny other individuals of using the Service through command spam or crashing the bot.</li>
                 <li>You must not alter Gameplay through the intentional use of exploits or bugs.</li>
                 <li>If You discover an exploit or bug, You must not share the issue publicly. It is requested that You go through the proper channels to report the issue.</li>
