Potential fix to double animations

--- a/legal/index.html
+++ b/legal/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/assets/images/BoarBotMascot.png">
     <link rel="stylesheet" href="/main.css">
+    <script src="/assets/scripts/script.js"></script>
     <title>Legal</title>
 </head>
 <body>
@@ -88,4 +89,3 @@
 </main>
 </body>
 </html>
-<script src="/assets/scripts/script.js" defer></script>
