--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="/assets/images/BoarBotMascot.png">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="/assets/scripts/script.js"></script>
     <title>BoarBot - Discord Bot</title>
 </head>
 <body>
@@ -46,4 +47,3 @@
 </main>
 </body>
 </html>
-<script src="/assets/scripts/script.js" defer></script>
