Updated privacy policy

--- a/legal/index.html
+++ b/legal/index.html
@@ -73,7 +73,7 @@
                 <li><strong>Gameplay</strong> refers to the normal processes that occur on the Service.</li>
             </ul>
             <h2>Personal Data</h2>
-            <p>The only personal data We collect is Your user ID and your Server's guild ID, which is used to fetch Your Gameplay data and preferences.</p>
+            <p>The only personal data We collect is Your user ID, which is used to fetch Your Gameplay data, Your username, which is used on leaderboards, and Your Server's ID, which is used to fetch preferences and configurations.</p>
             <h2>Other Data</h2>
             <p>The only other data We collect is used for Gameplay and support.</p>
             <ul>
