--- a/nav.html
+++ b/nav.html
@@ -1,6 +1,6 @@
 <nav>
     <li id="nav-left">
-        <img src="/assets/images/BoarBotMascot.png">
+        <a href="/#"><img src="/assets/images/BoarBotMascot.png"></a>
         <a href="https://discord.com/api/oauth2/authorize?client_id=1025590776861819012&permissions=35840&scope=bot%20applications.commands" target="_blank" rel="noopener noreferrer">
             <button>Invite</button>
         </a>
