--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p>Have a competitive spirit? You can show it through the several leaderboards that BoarBot has! Players that have a top spot on a leaderboard also get a badge!</p>
         </div>
     </section>
-    <section class="feature">
+    <section class="feature" clue="/a/pZ6Uyfy">
         <img src="/assets/images/MarketShowcase.png" alt="An overview page in the Boar Market with buy and sell prices for eight different boars. Beneath are navigation buttons.">
         <div>
             <h2>BUY AND SELL</h2>
