More Terms updates

--- a/legal/index.html
+++ b/legal/index.html
@@ -37,7 +37,7 @@
                 <li><strong>Gameplay</strong> refers to the normal processes that occur on the Service.</li>
                 <li><strong>Alternate Account</strong> refers to a Discord account that is not the main account of operations for an individual.</li>
                 <li><strong>Automated</strong> refers to using scripts or external programs to automatically perform an action on the Service.</li>
-                <li><strong>Wiping</strong> refers to the action of deleting Your data.</li>
+                <li><strong>Wiping</strong> refers to the action of deleting Your data from the Service.</li>
             </ul>
             <h2>Acknowledgement</h2>
             <p>By using the Service, You and your Server agree to be bound by these Terms of Service. Any violation of these Terms of Service will result in forfeiting Your and your Server's privileges of Community Features.</p>
@@ -45,7 +45,7 @@
             <ul>
                 <li>You must not abuse Community Features to gain an advantage through the usage of Alternate Accounts or Automated actions.</li>
                     <ul><li>This includes but not limited to: Giving and receiving Gifts to/from Alternate Accounts, buying/selling boars from Alternate Accounts, and using Alternate Accounts in Events to get more/better rewards.</li></ul>
-                <li>You must not manipulate Community Features if You or other individual plan on Wiping.</li>
+                <li>You must not intentionally manipulate Community Features if You or other individual plan on Wiping.</li>
                 <li>You must not intentionally attempt to deny other individuals of using the Service through command spam or crashing the bot.</li>
                 <li>You must not alter Gameplay through the intentional use of exploits or bugs.</li>
                 <li>If You discover an exploit or bug, You must not share the issue publicly. It is requested that You go through the proper channels to report the issue.</li>
