Updated navigation to link to wiki
Signed-off-by: Wesley <60010287+WeslayCodes@users.noreply.github.com>

--- a/nav.html
+++ b/nav.html
@@ -7,7 +7,7 @@
     </li>
     <div id="nav-items">
         <li><a href="/#">Home</a></li>
-        <li><a href="https://boarbot.fandom.com/wiki/Boar_Wiki" target="_blank" rel="noreferrer noopener">Wiki ⧉</i></a></li>
+        <li><a href="https://wiki.boarbot.dev" target="_blank" rel="noreferrer noopener">Wiki ⧉</i></a></li>
         <li><a href="https://github.com/WeslayCodes/BoarBot" target="_blank" rel="noreferrer noopener">GitHub ⧉</i></a></li>
         <li><a href="/legal/#">Legal</a></li>
     </div>
