Clean slate for wiki

--- a/index.html
+++ b/index.html
@@ -12,38 +12,8 @@
 </head>
 <body>
 <main>
-    <section id="summary">
-        <h1>BoarBot</h1>
-        <p>A gacha-like game based around boars! Collect, buy, sell, and compete with others for the top spots on several different leaderboards!</p>
-    </section>
-    <section class="feature">
-        <img src="/assets/images/DailyItems.png" alt="Stack of four Daily Boars">
-        <div>
-            <h2>COLLECT</h2>
-            <p>BoarBot has dozens of unique boars for you to collect! Some are easy to get, some are extremely rare drops, and some can be obtained during events!</p>
-        </div>
-    </section>
-    <section class="feature">
-        <img src="/assets/images/PowerupShowcase.png" alt="A Powerup Event telling players to click the detective emoji that's different from the others. ">
-        <div>
-            <h2>POWER UP</h2>
-            <p>Bring some power to your collecting capabilities by participating in Powerup Events! Powerups have a wide range of abilities for you to use and discover!</p>
-        </div>
-    </section>
-    <section class="feature">
-        <img src="/assets/images/LeaderboardShowcase.png" alt="A leaderboard for Boar Bucks going from position #1 to position #28. Beneath are navigation buttons and menus.">
-        <div>
-            <h2>COMPETE</h2>
-            <p>Have a competitive spirit? You can show it through the several leaderboards that BoarBot has! Players that have a top spot on a leaderboard also get a badge!</p>
-        </div>
-    </section>
-    <section class="feature" clue="/a/pZ6Uyfy">
-        <img src="/assets/images/MarketShowcase.png" alt="An overview page in the Boar Market with buy and sell prices for eight different boars. Beneath are navigation buttons.">
-        <div>
-            <h2>BUY AND SELL</h2>
-            <p>Interact with a full-fledged economy by setting up buy orders and sell offers! This is a great place to see and purchase boars you don't already have!</p>
-        </div>
-    </section>
+    <h1>BoarBot Wiki</h1>
+    <p>Under development</p>
 </main>
 </body>
 </html>
