--- a/nav.html
+++ b/nav.html
@@ -6,10 +6,10 @@
         </a>
     </li>
     <div id="nav-items">
-        <li><a href="/#">Home</a></li>
-        <li><a href="https://wiki.boarbot.dev" target="_blank" rel="noreferrer noopener">Wiki ⧉</i></a></li>
-        <li><a href="https://github.com/WeslayCodes/BoarBot" target="_blank" rel="noreferrer noopener">GitHub ⧉</i></a></li>
-        <li><a href="/legal/#">Legal</a></li>
+        <li><a href="#">Empty</a></li>
+        <li><a href="#">Empty ⧉</i></a></li>
+        <li><a href="#">Empty ⧉</i></a></li>
+        <li><a href="#">Empty</a></li>
     </div>
     <li id="hamburger-menu">
         <button><i id="hamburger"></i></button>
