Small change to nac

--- a/nav.html
+++ b/nav.html
@@ -7,8 +7,8 @@
     </li>
     <div id="nav-items">
         <li><a href="#">Empty</a></li>
-        <li><a href="#">Empty ⧉</i></a></li>
-        <li><a href="#">Empty ⧉</i></a></li>
+        <li><a href="#">Empty</i></a></li>
+        <li><a href="#">Empty</i></a></li>
         <li><a href="#">Empty</a></li>
     </div>
     <li id="hamburger-menu">
