--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="assets/images/BoarBotMascot.png">
+    <link rel="icon" href="/assets/images/BoarBotMascot.png">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="assets/scripts/script.js"></script>
+    <script src="/assets/scripts/script.js"></script>
     <title>BoarBot - Discord Bot</title>
 </head>
 <body>
